added show hide keyboard option

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@emotion/css": "11.10.0",
         "@tilemoon/react-theme-manager": "0.4.0",
+        "lucide-react": "^0.292.0",
         "normalize.css": "8.0.1",
         "random-words": "1.2.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1"
     },
     "devDependencies": {
         "@types/react": "^18.0.23",
